# podcast-packager-agents

./: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
main-packager/: agent.json  file_organization.json  system_prompt.txt
src/: server.py
src/main_packager/: graph.py
src/titling_agent/: graph.py
src/transcript_analyzer/: graph.py
src/trend_researcher/: graph.py
titling-agent/: agent.json  system_prompt.txt
transcript-analyzer/: agent.json  system_prompt.txt
trend-researcher/: agent.json  system_prompt.txt
